<resources>
    <string name="app_name">SAES</string>
    <string name="nivel_superior">Superior</string>
    <string name="nivel_medio_superior">Medio Superior</string>
    <string name="boleta">Boleta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="acceder">Acceder</string>
    <string name="captcha">Captcha</string>
    <string name="elegir_unidad">Cambiar de unidad</string>
    <string name="logo_de_la_escuela">Logo de la escuela</string>
    <string name="shortcut_short_label">Create email</string>
    <string name="shortcut_long_label">Create new email</string>
    <string name="disabled_message">Agregar</string>


    <string-array name="paletaHorario">
        <item>#F44336</item>
        <item>#9C27B0</item>
        <item>#E91E63</item>
        <item>#673AB7</item>
        <item>#2196F3</item>
        <item>#3F51B5</item>
        <item>#00BCD4</item>
        <item>#4CAF50</item>
        <item>#009688</item>
        <item>#FFC107</item>
        <item>#d451c5</item>
        <item>#B71C1C</item>
        <item>#4A148C</item>
        <item>#880E4F</item>
        <item>#311B92</item>
        <item>#01579B</item>
        <item>#1A237E</item>
        <item>#0D47A1</item>
        <item>#33691E</item>
        <item>#006064</item>
        <item>#F57F17</item>
        <item>#3d6071</item>
        <item>#000000</item>
    </string-array>

    <string-array name="tipo_eventos">
        <item>Tarea</item>
        <item>Examen</item>
        <item>Proyecto</item>
        <item>Recordatorio</item>
        <item>Evento</item>
    </string-array>

    <string-array name="evaluacion_recomendacion">
        <item>Seleccione una respuesta</item>
        <item>No</item>
        <item>Sí</item>
    </string-array>

    <string-array name="themeOptionsApi28">
        <item>Claro</item>
        <item>Oscuro</item>
        <item>Establecer según el Ahorro de batería</item>
    </string-array>

    <string-array name="themeOptionsApi29">
        <item>Claro</item>
        <item>Oscuro</item>
        <item>Predeterminado del sistema</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
