<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/loginParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:adSize="BANNER"
                    app:adUnitId="ca-app-pub-5186385350655213/6833706748"/>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/loginCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorSurface"
                    app:cardCornerRadius="8dp"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/loginLogo"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="end"
                                android:contentDescription="Logo IPN"
                                app:srcCompat="@drawable/ic_logopoli" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|fill_vertical|center_horizontal"
                                android:layout_marginTop="16dp"
                                android:text="@string/acceder"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="22sp" />
                        </FrameLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/loginBoleta"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:focusable="false"
                            android:hint="@string/boleta"
                            android:nextFocusDown="@id/loginPass"
                            app:boxStrokeColor="@color/colorAccent"
                            app:endIconMode="none"
                            app:hintTextColor="@color/colorAccent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textCursorDrawable="@null" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/loginPass"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:hint="@string/contrase_a"
                            android:nextFocusDown="@id/loginCaptcha"
                            app:boxStrokeColor="@color/colorAccent"
                            app:hintTextColor="@color/colorAccent"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="?attr/colorOnSurface">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:nextFocusDown="@id/loginCaptcha"
                                android:singleLine="true"
                                android:textCursorDrawable="@null" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/loginRecordarPass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="Recordar constraseña"
                            android:textColor="?android:attr/textColorPrimary" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp">

                            <ProgressBar
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center" />

                            <WebView
                                android:id="@+id/webViewCaptcha"
                                android:layout_width="110dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center" />
                        </FrameLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/loginCaptcha"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/captcha"
                            app:boxStrokeColor="@color/colorAccent"
                            app:hintTextColor="@color/colorAccent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapCharacters"
                                android:singleLine="true"
                                android:textAlignment="center"
                                android:textCursorDrawable="@null" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/loginLoginBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="@color/colorAccent"
                            android:text="@string/iniciar_sesi_n"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/offlineButton"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="Offline"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/loadingFragment"
            layout="@layout/fragment_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/elegirEscuelaSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:behavior_hideable="false"
            app:behavior_peekHeight="40dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <LinearLayout
                android:id="@+id/elegirEscuelaDrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:contentDescription="Arrow"
                    android:scaleType="centerCrop"
                    android:tint="?android:attr/textColorPrimary"
                    app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/elegir_unidad"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>

            <include
                layout="@layout/activity_select_school"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>